# VoiceTyper

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.sh  build_git_bash.sh  package.bat  package.sh  release.bat  release.sh
docs/: release-optimization-benchmark-plan.md  streaming-vad-benchmark-plan.md
packaging/: VoiceTyper.wxs
src/: app_core.h  audio_pipeline.h  benchmark_main.cpp  control.h  host_services.h  imgui_main.cpp  imgui_ui.h  input.h  model_assets.h  platform.h  platform_win32.h  runtime_control.h  runtime_types.h  settings.h  settings_store.h  sounds.h  state.h  stream_chunker.h  system.h  transcription_core.h  whisper_wrapper.h
tools/: benchmark_release_optimization.sh  benchmark_streaming_vad.sh  build.bat  build.sh  build_msi.sh  package.bat  package.sh  release.bat  release.sh  run.bat
